[project]
name = "tm-analytics"
version = "0.1.0"
requires-python = ">=3.10"

# Dependencias necesarias para ejecutar el proyecto
dependencies = [
    "pandas",
    "plotly",
    "vizro",
    "typer",
    "python-dotenv"
]

# Configuración para estructura tipo "src/"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Sistema de construcción (build) basado en setuptools
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
